--- a/backend/views/articleDisplay.ejs
+++ b/backend/views/articleDisplay.ejs
@@ -24,7 +24,7 @@
         <div class = "news-display">  
                <h3> <%= display.articles.title %></h3> 
                 <p> <%= display.articles.content%></p>
-               <%=console.log(display.title)%>
+               <%=console.log(display)%>
 
       
 
