--- a/backend/views/search.ejs
+++ b/backend/views/search.ejs
@@ -10,6 +10,7 @@
     <title>Node News</title>
 </head>
 
+
 <header>
     <div class="container-fluid bg-primary p-2 overflow-hidden">
         <div class="header-tabs d-flex justify-content-between align-items-center">
@@ -23,19 +24,18 @@
         </div>
         </div>
        </header>
-    
-      
-
 
 <body>
+
+    <div class="wrapper">
         <div class = "news">  
-            <% if (data.articles != null){ %>
-            <%data.articles.forEach((article)=>{ %>
-            <a href = '<%=article.url%>' class = "news__card text-decoration-none text-black" target="_blank">
-            <img src = "<%= article.urlToImage %>"  alt= <%= article.title %>>
-             <h3 class="text-center"> <%- article.title %></h3> 
-               <p class="text-center"> <%= article.description %></p>
-               <p class="text-center"> <%= article.publishedAt %></p>
+            <% if (news.articles != null){ %>
+            <%news.articles.forEach((search)=>{ %>
+            <a href = '<%=search.url%>' class = "news__card text-decoration-none text-black" target="_blank">
+            <img src = "<%= search.urlToImage %>"  alt= <%= search.title %>>
+             <h3 class="text-center"> <%- search.title %></h3> 
+               <p class="text-center"> <%= search.description %></p>
+               <p class="text-center"> <%= search.publishedAt %></p>
                </a>
                <%  })%>
                <% } else { %>
@@ -45,8 +45,7 @@
     
     
     </div>
-    
- 
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </body>
