--- a/backend/views/search.ejs
+++ b/backend/views/search.ejs
@@ -13,7 +13,7 @@
 
 <header>
     <div class="container-fluid bg-primary p-2 overflow-hidden">
-        <div class="header-tabs d-flex justify-content-between align-items-center">
+        <div class="header-tabs">
        <div class="header__logo"><a class="text-decoration-none text-black" href=''>NEWS</a></div>
         <div class = "header__search">
             <form class="d-flex" role="search" method="POST">
